--- a/graphql-android/app/build.gradle
+++ b/graphql-android/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     // Json
     implementation 'com.squareup.moshi:moshi:1.5.0'
+    // Kraph
+    implementation 'me.lazmaid.kraph:kraph:0.6.0'
 }
