--- a/graphql-android/app/build.gradle
+++ b/graphql-android/app/build.gradle
@@ -1,9 +1,20 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.apollographql.android'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+buildscript {
+    ext.apollo_version = '0.4.3'
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "com.apollographql.apollo:apollo-gradle-plugin:$apollo_version"
+    }
+}
+
 android {
-    buildToolsVersion '27.0.1'
+    buildToolsVersion '27.0.2'
     compileSdkVersion 27
     defaultConfig {
         applicationId 'fr.xebia.graphql'
@@ -31,4 +42,7 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.5.0'
     // Kraph
     implementation 'me.lazmaid.kraph:kraph:0.6.0'
+    // Apollo
+    implementation "com.apollographql.apollo:apollo-runtime:$apollo_version"
+    implementation "com.apollographql.apollo:apollo-android-support:$apollo_version"
 }
